Fixed AB#2293 Bug 2293: Registration - Alignment issue on phone confirmation page

--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -35,7 +35,11 @@ html[dir="rtl"] {
   }
    fieldset+.v-text-field__slot > label  {
     /*rtl:ignore */
-    left :inherit !important ;
+    left :unset !important ;
+  }
+  .v-input__prepend-inner+fieldset+.v-text-field__slot>label {
+     /*rtl:ignore */
+    right: -27px !important;
   }
 }
 
